# matrix-accelerator

./: .gitignore
board/: blink_chkpt2.tcl  blink_chkpt2.xpr  systolic_array_test_1_behav.wcfg
board/blink_chkpt2.srcs/constrs_1/new/: led.xdc
board/blink_chkpt2.srcs/multiplier/new/: sim_1.v
board/blink_chkpt2.srcs/sim_1/bd/design_2/: design_2.bd  design_2.bda
board/blink_chkpt2.srcs/sim_1/imports/blink2/: test_behav.wcfg
board/blink_chkpt2.srcs/sim_1/new/: axi_stim.sv  test.sv
board/blink_chkpt2.srcs/sources_1/new/: axi_master.sv  axi_master.v  axi_master_app.v  axi_master_fse.v  axi_read_fse.sv  axi_write_fse.sv  blink_chkpt2_def_val.txt  blink_chkpt2_dump.txt  matrix_master.v  matrix_memory_handle.v  matrix_multiplier.sv  matrix_multiplier.v  matrix_num_calculator.sv  matrix_write_buffer.sv  memory_states.vh  pcie_master.v  pe_grid_generator.sv  refclk.v  systolic_PE.v  systolic_array.sv  systolic_array.v  tile_number_calculator.sv  top.v  turn_on_led_after_bil_cycles.v
board/blink_chkpt2.srcs/systolic_array/new/: systolic_array_test_1.sv
demo/: .gitignore  CMakeLists.txt  Taskfile.yml  demo.cpp  test  test.cpp
demo/include/: api.hpp  matrix.hpp  types.hpp
demo/scripts/: README.md  test.sh
demo/src/: api.cpp  main.cpp  matrix.cpp
driver/: .gitignore  Makefile  Taskfile.yml  dma_descriptor.h  dma_operations.h  dma_regs.h  dma_util.h  fpga_driver.c  util.h
driver/include/: dma_descriptor.h  dma_operations.h  dma_regs.h  fpga_driver.h  mmio_operations.h
driver/src/: dma_descriptor.c  dma_operations.c  dma_regs.c  mmio_operations.c  pcie.c
(+17 files in other folders)
